@@ -1,3 +1,8 @@
+2013-06-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/model/action_sequence_log_parser.cpp:
+	- 最後の行動列データが登録されていなかったバグを修正
+
 2013-06-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/qt4/debug_message_window.cpp:
